fix(ball): part of ball is hiding when moving to side of page
Previously when ball was moved to the side of page, scrollbar was
created, so the whole ball could be seen.
After fix, part of ball is hiding, so it is behaving like that part is
on different screen.

--- a/examples/sharedWorkspace/views/css/style.styl
+++ b/examples/sharedWorkspace/views/css/style.styl
@@ -3,6 +3,7 @@ dimensions(w, h)
   height h
 
 body
+  overflow hidden
   padding 10px
   font 14px "Lucida Grande", Helvetica, Arial sans-serif
   // background white
